--- a/Website/CSSStyles/Login_stilius.css
+++ b/Website/CSSStyles/Login_stilius.css
@@ -69,6 +69,7 @@ body{
     background-size: cover;
     font-family: 'Open Sans', sans-serif;
     line-height: 1.6;
+    padding-top: 90px;
 }
 *,:after,:before{box-sizing:border-box}
 .clearfix:after,.clearfix:before{content:'';display: table}
@@ -92,6 +93,9 @@ a{color:inherit;text-decoration: none}
     font-size: 30px;
     margin-left:50px;
 }
+.signup_btn .button{
+    cursor: pointer;
+}
 .menu-display{
     font-weight: 350;
     color: #fff;
@@ -103,9 +107,9 @@ a{color:inherit;text-decoration: none}
 .login-wrap{
     width:100%;
     margin:auto;
-    margin-top: 160px;
+    margin-top: 50px;
     max-width: 525px;
-    min-height: 583px;
+    min-height: 700px;
     position:relative;
     /*background: url("background1.jpg") no-repeat center;*/
     overflow: hidden;
