--- a/website/public/css/details_style.css
+++ b/website/public/css/details_style.css
@@ -69,14 +69,58 @@
     color: #555;
     line-height: 1.3;
 }
-.hotel-details h4{
-    margin: 15px 0 15px 300px;
-}
-.hotel-details p{
+
+.hotel-details {
     font-family: 'Poppins', sans-serif;
-    padding: 0 300px 0 300px ;
-    display: flex;
+    max-width: 900px;
+    margin: 0 auto;
+    padding: 0 20px;
+    line-height: 1.6;
+    text-align: justify;
 }
+
+.hotel-details h1 { font-size: 2.25rem; margin: 1.5em 0 0.75em; }
+.hotel-details h2 { font-size: 2rem;    margin: 1.5em 0 0.75em; }
+.hotel-details h3 { font-size: 1.75rem; margin: 1.5em 0 0.75em; }
+.hotel-details h4 { font-size: 1.5rem;  margin: 1.5em 0 0.75em; }
+
+.hotel-details p {
+    font-size: 1.125rem;
+    margin: 1em 0;
+}
+
+.hotel-details ul {
+    font-size: 1.125rem;
+    margin: 1em 0;
+    padding-left: 2em;
+    list-style-type: disc;
+    text-align: justify;
+}
+
+.hotel-details ol {
+    font-size: 1.125rem;
+    margin: 1em 0;
+    padding-left: 2em;
+    list-style-type: decimal;
+    text-align: justify;
+}
+
+.hotel-details li {
+    margin: 0.5em 0;
+}
+
+
+.hotel-details strong { font-weight: 600; }
+.hotel-details em { font-style: italic; }
+
+.hotel-details img {
+    max-width: 100%;
+    height: auto;
+    display: block;
+    margin: 1em 0;
+}
+
+
 h2{
     margin-top: 80px;
 }
@@ -104,7 +148,7 @@ h2{
   overflow: hidden;
   border-radius: 12px;
   box-shadow: 0 8px 20px rgba(0, 0, 0, 0.15);
-  margin-top: 150px;
+  margin-top: 30px;
 }
 
 .slider-container {
@@ -208,8 +252,6 @@ h2{
 .next {
   right: 10px;
 }
-
-
 
 body {
     font-family: 'Poppins', sans-serif;
@@ -547,5 +589,8 @@ img {
     font-size: 0.9rem;
 }
 
-
-
+.hotel-name {
+    text-align: center;
+    margin-top: 2.5em;
+    font-size: 36pt;
+}
